data/derived/sp14/progs/unify/prog3356.ml.out
Characters 81-87:
  n mod 10 :: myList
              ^^^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
